--- a/src/main/resources/public/templates/home.html
+++ b/src/main/resources/public/templates/home.html
@@ -1,7 +1,9 @@
 <div class="container">
 
   <div class="row">
-    Choose a property: insert select box here
+    <select ng-model="field">
+      <option ng-repeat="(key, name) in fields" value="key">{{name}}</option>
+    </select>
   </div>
 
   <div class="row">
