--- a/src/main/resources/public/templates/home.html
+++ b/src/main/resources/public/templates/home.html
@@ -8,11 +8,15 @@
   <div class="row">
     <div class="col-md-6">
       <h3>Best Stocks</h3>
-      insert table here
+      <ol>
+        <li ng-repeat="item in best">{{item.name}} - {{item[field.id]}}</li>
+      </ol>
     </div>
     <div class="col-md-6">
       <h3>Worst Stocks</h3>
-      insert table here
+      <ol>
+        <li ng-repeat="item in worst">{{item.name}} - {{item[field.id]}}</li>
+      </ol>
     </div>
   </div>
 </div>
