--- a/src/main/resources/public/templates/home.html
+++ b/src/main/resources/public/templates/home.html
@@ -9,7 +9,9 @@
     <div class="col-md-6">
       <h3>Best Stocks</h3>
       <ol>
-        <li ng-repeat="item in best">{{item.name}} - {{item[field.id]}}</li>
+        <li ng-repeat="item in best">
+          <a ng-href="#/stock/{{item.symbol}}">{{item.name}} - {{item[field.id]}}</a>
+        </li>
       </ol>
     </div>
     <div class="col-md-6">
