--- a/src/main/resources/public/templates/stock.html
+++ b/src/main/resources/public/templates/stock.html
@@ -28,7 +28,7 @@
       </table>
     </div>
     <div class="col-md-8">
-      Chart goes here.
+      <div id="stockChart"></div>
     </div>
   </div>
 
