--- a/src/main/resources/public/templates/home.html
+++ b/src/main/resources/public/templates/home.html
@@ -6,19 +6,41 @@
   </div>
 
   <div class="row">
+
     <div class="col-md-6">
-      <h3>Best Stocks</h3>
-      <ol>
-        <li ng-repeat="item in best">
-          <a ng-href="#/stock/{{item.symbol}}">{{item.name}} - {{item[field.id]}}</a>
-        </li>
-      </ol>
+      <h2>Best Stocks</h2>
+      <table>
+        <tr>
+          <th>#</th>
+          <th>Security Name</th>
+          <th>Value</th>
+        </tr>
+        <tr ng-repeat="item in best">
+          <td>{{$index + 1}}</td>
+          <td>
+            <a ng-href="#/stock/{{item.symbol}}">{{item.name}}</a>
+          </td>
+          <td>{{item[field.id]}}</td>
+        </tr>
+      </table>
     </div>
+
     <div class="col-md-6">
-      <h3>Worst Stocks</h3>
-      <ol>
-        <li ng-repeat="item in worst">{{item.name}} - {{item[field.id]}}</li>
-      </ol>
+      <h2>Worst Stocks</h2>
+      <table>
+        <tr>
+          <th>#</th>
+          <th>Security Name</th>
+          <th>Value</th>
+        </tr>
+        <tr ng-repeat="item in worst">
+          <td>{{$index + 1}}</td>
+          <td>
+            <a ng-href="#/stock/{{item.symbol}}">{{item.name}}</a>
+          </td>
+          <td>{{item[field.id]}}</td>
+        </tr>
+      </table>
     </div>
   </div>
 </div>
