--- a/src/main/resources/public/templates/home.html
+++ b/src/main/resources/public/templates/home.html
@@ -27,10 +27,10 @@
 
     <div class="col-md-6">
       <h2>Worst Stocks</h2>
-      <table>
+      <table class="table table-striped">
         <tr>
           <th>#</th>
-          <th>Security Name</th>
+          <th class="amap">Security Name</th>
           <th>Value</th>
         </tr>
         <tr ng-repeat="item in worst">
