Field name in table headers

--- a/src/main/resources/public/templates/home.html
+++ b/src/main/resources/public/templates/home.html
@@ -13,7 +13,7 @@
         <tr>
           <th>#</th>
           <th class="amap">Security Name</th>
-          <th>Value</th>
+          <th>{{field.name}}</th>
         </tr>
         <tr ng-repeat="item in best">
           <td>{{$index + 1}}</td>
@@ -31,7 +31,7 @@
         <tr>
           <th>#</th>
           <th class="amap">Security Name</th>
-          <th>Value</th>
+          <th>{{field.name}}</th>
         </tr>
         <tr ng-repeat="item in worst">
           <td>{{$index + 1}}</td>
