--- a/src/main/resources/public/templates/home.html
+++ b/src/main/resources/public/templates/home.html
@@ -1,8 +1,9 @@
 <div class="container">
 
   <div class="row">
-    <select ng-model="field" ng-options="f.name for f in fields">
-    </select>
+    <div class="btn-group">
+      <label class="btn btn-primary" ng-model="field" ng-repeat="f in fields" btn-radio="f.id">{{f.name}}</label>
+    </div>
   </div>
 
   <div class="row">
