--- a/src/main/resources/public/templates/home.html
+++ b/src/main/resources/public/templates/home.html
@@ -2,7 +2,7 @@
 
   <div class="row">
     <div class="btn-group">
-      <label class="btn btn-primary" ng-model="field" ng-repeat="f in fields" btn-radio="f.id">{{f.name}}</label>
+      <label class="btn btn-primary" ng-model="field" ng-repeat="f in fields" btn-radio="f">{{f.name}}</label>
     </div>
   </div>
 
