--- a/src/main/resources/public/templates/home.html
+++ b/src/main/resources/public/templates/home.html
@@ -2,7 +2,7 @@
 
   <div class="row">
     <div class="btn-group">
-      <label class="btn btn-primary" ng-model="field" ng-repeat="f in fields" btn-radio="f">{{f.name}}</label>
+      <label class="btn btn-primary" ng-model="field" ng-repeat="f in fields" btn-radio="f.id">{{f.name}}</label>
     </div>
   </div>
 
@@ -21,7 +21,7 @@
           <td>
             <a ng-href="#/stock/{{item.symbol}}">{{item.name}}</a>
           </td>
-          <td>{{item[field.id] | number:2}}</td>
+          <td>{{item[field] | number:2}}</td>
         </tr>
       </table>
     </div>
@@ -32,7 +32,7 @@
         <tr>
           <th>#</th>
           <th class="amap">Security Name</th>
-          <th>{{field.name}}</th>
+          <th>{{fields.get(field)}}</th>
         </tr>
         <tr ng-repeat="item in worst">
           <td>{{$index + 1}}</td>
