--- a/src/main/resources/public/templates/home.html
+++ b/src/main/resources/public/templates/home.html
@@ -3,10 +3,11 @@
   <div class="row">
     <div class="col-md-12 centered">
       <h2>Search for an S&P 500 stock</h2>
-      <form ng-submit="searchStock()">
+      <form class="inline" ng-submit="searchStock()">
         <input type="text" ng-model="symbol" />
+        <button type="submit" class="btn btn-default">Search</button>
       </form>
-      <h2>- or </h2>
+      <h2>- or -</h2>
       <h2>Select a field to sort by</h2>
       <select ng-model="field" ng-options="f.name for f in fields">
       </select>
