--- a/src/main/resources/public/templates/home.html
+++ b/src/main/resources/public/templates/home.html
@@ -4,7 +4,9 @@
     <div class="col-md-12 centered">
       <h2>Search for an S&P 500 stock</h2>
       <form class="inline" ng-submit="searchStock()">
-        <input type="text" ng-model="symbol" />
+        <div class="form-group">
+          <input type="text" class="form-control" ng-model="symbol" />
+        </div>
         <button type="submit" class="btn btn-default">Search</button>
       </form>
       <h2>- or -</h2>
