--- a/src/main/resources/public/templates/home.html
+++ b/src/main/resources/public/templates/home.html
@@ -1,7 +1,7 @@
 <div class="container">
 
   <div class="row">
-    <div class="col-md-12 centered">
+    <div class="col-md-offset-3 col-md-6 centered">
       <h2>Search for an S&P 500 stock</h2>
       <form class="inline" ng-submit="searchStock()">
         <div class="form-group">
