--- a/src/main/resources/public/templates/stock.html
+++ b/src/main/resources/public/templates/stock.html
@@ -38,19 +38,19 @@
       <table class="table table-striped">
         <tr>
           <th>1 month P/L</th>
-          <td>{{pl.month}}</td>
+          <td>{{pl.month | currency}}</td>
         </tr>
         <tr>
           <th>3 month P/L</th>
-          <td>{{pl.threeMonth}}</td>
+          <td>{{pl.threeMonth | currency}}</td>
         </tr>
         <tr>
           <th>1 year P/L</th>
-          <td>{{pl.year}}</td>
+          <td>{{pl.year | currency}}</td>
         </tr>
         <tr>
           <th>5 year P/L</th>
-          <td>{{pl.fiveYear}}</td>
+          <td>{{pl.fiveYear | currency}}</td>
         </tr>
       </table>
 
