--- a/src/main/resources/public/templates/stock.html
+++ b/src/main/resources/public/templates/stock.html
@@ -21,7 +21,7 @@
         </tr>
         <tr>
           <th>Twitter Sentiment</th>
-          <td>{{stockData.twitterSentiment}}</td>
+          <td style="background-color: '{{stockData.ratingNice.color}}'">{{stockData.ratingNice.text}} ({{stockData.twitterSentiment}})</td>
         </tr>
         <tr>
           <th>Recommendation</th>
