--- a/src/main/resources/public/templates/stock.html
+++ b/src/main/resources/public/templates/stock.html
@@ -25,7 +25,7 @@
         </tr>
         <tr>
           <th>Recommendation</th>
-          <td bgcolor="stockData.ratingNice.color">{{stockData.ratingNice.text}} ({{stockData.eqyRecCons | number:2}})</td>
+          <td ng-class="stockData.ratingNice.style">{{stockData.ratingNice.text}} ({{stockData.eqyRecCons | number:2}})</td>
         </tr>
       </table>
 
