--- a/src/main/resources/public/app.css
+++ b/src/main/resources/public/app.css
@@ -7,21 +7,21 @@
 }
 
 .strong-buy {
-  background-color: '#11644D';
+  background-color: #11644D;
 }
 
 .weak-buy {
-  background-color: '#A0B046';
+  background-color: #A0B046;
 }
 
 .hold {
-  background-color: '#F2C94E';
+  background-color: #F2C94E;
 }
 
 .weak-sell {
-  background-color: '#F78145';
+  background-color: #F78145;
 }
 
 .strong-sell {
-  background-color: '#F24E4E';
+  background-color: #F24E4E;
 }
