--- a/src/main/resources/public/templates/stock.html
+++ b/src/main/resources/public/templates/stock.html
@@ -52,6 +52,10 @@
           <th>5 year P/L</th>
           <td>{{pl.fiveYear | currency}}</td>
         </tr>
+        <tr>
+          <th>10 year P/L</th>
+          <td>{{pl.tenYear | currency}}</td>
+        </tr>
       </table>
 
     </div>
