--- a/src/main/resources/public/templates/stock.html
+++ b/src/main/resources/public/templates/stock.html
@@ -12,6 +12,10 @@
       <h2 class="page-header">Details</h2>
       <table class="table table-striped">
         <tr>
+          <th>Market Cap</th>
+          <td>{{stockData.marketCap | currency}}</td>
+        </tr>
+        <tr>
           <th>Last</th>
           <td>{{stockData.last | currency}}</td>
         </tr>
