--- a/src/main/resources/public/app.css
+++ b/src/main/resources/public/app.css
@@ -30,3 +30,74 @@ td.rec {
   color: #fff;
   font-weight: bold;
 }
+a, i.ionicons {
+	transition: 200ms ease-in-out;
+}
+.heading {
+	height: 350px;
+	color: #FFF;
+	font-family: 'Open Sans';
+	text-align: left;
+	position: relative;
+}
+.heading .background {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: url(../img/splash4.jpg);
+	background-size: cover;
+}
+.heading h2 {
+	margin-top: 100px;
+	font-size: 1.6em;
+}
+.heading input.form-control {
+	font-size: 1.6em;
+	padding: 30px 20px;
+	border: none;
+	background: rgba(255,255,255,0.7);
+}
+.row.body {
+	position: relative;
+	background: #f0f0f0;
+}
+.row.sorting {
+	padding: 0 15px;
+}
+.row.sorting select {
+	background: #FFF;
+	border: none;
+	height: 30px;
+}
+.row.body .container {
+	padding: 60px 0;
+}
+.row.body .or {
+	position: absolute;
+	top: -50px;
+	left: 50%;
+	width: 100px;
+	height: 100px;
+	border-radius: 100%;
+	margin-left: -50px;
+	line-height: 100px;
+	text-align: center;
+	background: #FFF;
+	font-size: 2em;
+	color: #555;
+	font-weight: bold;
+}
+.heading .home {
+	position: absolute;
+	left: 0;
+	top: 0;
+	margin: 20px;
+	line-height: 20px;
+	font-size: 20pt;
+	color: rgba(255,255,255,0.5);
+}
+.heading .home:hover {
+	color: #FFF;	
+}
