--- a/src/main/resources/public/templates/stock.html
+++ b/src/main/resources/public/templates/stock.html
@@ -63,7 +63,7 @@
       </table>
 
     </div>
-    <div class="col-md-8">
+    <div id="chart" class="col-md-8">
       <div id="stockChart"></div>
     </div>
   </div>
