--- a/src/main/resources/public/templates/stock.html
+++ b/src/main/resources/public/templates/stock.html
@@ -64,6 +64,7 @@
 
     </div>
     <div id="chart" class="col-md-8">
+      <div id="spinner"></div>
       <div id="stockChart"></div>
     </div>
   </div>
