--- a/src/main/resources/public/templates/stock.html
+++ b/src/main/resources/public/templates/stock.html
@@ -1,5 +1,5 @@
 <div class="container">
-
+  <a class="back" href="app.html"><i class="ionicons ion-arrow-left-c"></i> back</a>
   <div class="row">
     <div class="col-md-12">
       <h1>{{stockData.name}} ({{stockData.symbol}})</h1>
